<resources>
    <string name="zip_code">Zip Code:</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="refresh_rate">Refresh Rate:</string>
    <string name="text_size">Text Size:</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="text_color">Text Color:</string>
    <string name="background_color">Background Color:</string>
    <string-array name="TextBackgroundColors">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>
</resources>