<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewRefreshRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/refresh_rate"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewTextSize"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/seekBarRefreshRate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_size"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTextColor"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/switchTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRefreshRate"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBackgroundColor"
        app:layout_constraintRight_toLeftOf="@id/spinnerTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextSize"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewBackgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/background_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinnerBackgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextColor"
        android:layout_marginEnd="8dp" />

    <SeekBar
        android:id="@+id/seekBarRefreshRate"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="141dp"
        android:layout_height="20dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:animationResolution="@android:integer/config_longAnimTime"
        android:clickable="true"
        android:focusable="true"
        android:max="4"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:progress="0"
        android:scrollbars="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/switchTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textViewRefreshRate"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="n" />

    <Switch
        android:id="@+id/switchTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="8dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat"
        android:textOff="@string/small"
        android:textOn="@string/large"
        app:layout_constraintBottom_toTopOf="@id/spinnerTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textViewTextSize"
        app:layout_constraintTop_toBottomOf="@id/seekBarRefreshRate"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spinnerTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/TextBackgroundColors"
        app:layout_constraintBottom_toTopOf="@+id/spinnerBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textViewTextColor"
        app:layout_constraintTop_toBottomOf="@+id/switchTextSize"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spinnerBackgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/TextBackgroundColors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textViewBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/spinnerTextColor"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>